tests/snapshots/runtime_error_fixtures/boundary_return_string_as_int.snap
---
source: tests/error_fixtures/runtime_error_fixtures_snapshots.rs
---
Fixture: examples/runtime_errors/boundary_return_string_as_int.flx
== vm ==
status: 1
stdout:
<empty>
stderr:
[ 1 of 11] Compiling  Assert
[ 2 of 11] Compiling  Array
[ 3 of 11] Compiling  List
[ 4 of 11] Compiling  Either
[ 5 of 11] Compiling  IO
[ 6 of 11] Compiling  Math
[ 7 of 11] Compiling  Numeric
[ 8 of 11] Compiling  Option
[ 9 of 11] Compiling  String
[10 of 11] Compiling  BoundaryUnknown
• 1 error • examples/runtime_errors/boundary_return_string_as_int.flx
error[E300]: Return Type Mismatch

The body of `bad` does not match its declared return type.

  examples/runtime_errors/boundary_return_string_as_int.flx:4:5
  |
3 | fn bad() -> Int {
  |             --- `bad` was declared to return `Int`
4 |     RuntimeErrors.BoundaryUnknown.dynamic_string()
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |     ---------------------------------------------- this expression has type `String`

Note:
  declared return type: Int
  body type: String

Help:
  Return a `Int` value from `bad` or change its annotation.
